# llmsurvey

./: .dockerignore  .env.example  .gitignore  CODEBASE.md  Dockerfile  deploy.py  fly.toml  pyproject.toml
.github/workflows/: deploy.yml
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: NarrativeSummary.tsx  QuestionChart.tsx  StatsTable.tsx
frontend/src/pages/: RunPage.tsx  RunsPage.tsx  SurveysPage.tsx
llmsurvey/: cli.py  compare.py  demographics.py  llm.py  report.py  server.py  viz.py
llmsurvey/models/: participant.py  results.py  survey.py
surveys/my_survey/: demographic.yaml  survey.yaml
surveys/pew_us_values_2024/: demographic.yaml  survey.yaml
templates/: survey_prompt.j2
